--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ if(o.length>4){
     if(o[i].length==32){
       continue;
     }
+    if(o[i].charAt(0)=='@'){
+      continue;
+    }
     t.push(o[i]);
   }
   if(t.length>=2){
@@ -29,4 +32,13 @@ if(o.length>4){
 var baseurl=window.resUrl+'/'+window.appHash;
 document.write('<link rel="stylesheet" href="'+baseurl+'/static/index.'+o[1]+'.css">');
 </script></head><body><div id="app"></div>
-<script>document.write('<scr'+'ipt src="'+baseurl+'/static/js/chunk-vendors.'+o[2]+'.js"></scr'+'ipt>');document.write('<scr'+'ipt src="'+baseurl+'/static/js/index.'+o[3]+'.js"></scr'+'ipt>');</script></body></html>
+<script>
+var script = document.createElement('script');
+script.type = 'text/javascript';
+script.src = baseurl+'/static/js/chunk-vendors.'+o[2]+'.js';
+document.getElementsByTagName('body')[0].appendChild(script);
+var script = document.createElement('script');
+script.type = 'text/javascript';
+script.src = baseurl+'/static/js/index.'+o[3]+'.js';
+document.getElementsByTagName('body')[0].appendChild(script);
+</script></body></html>
